--- a/index.html
+++ b/index.html
@@ -8,41 +8,46 @@
     <title>Empresarial</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-            <a class="navbar-brand" href="#header"><img src="img/navbar-logo.svg" alt="landing page logo" class="headerLogo"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse row justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item headerNavItem">
-                        <a class="nav-link" href="#services">SERVICES</a>
-                    </li>
-                    <li class="nav-item headerNavItem">
-                        <a class="nav-link" href="#portfolio">PORTFOLIO</a>
-                    </li>
-                    <li class="nav-item headerNavItem">
-                        <a class="nav-link" href="#about">ABOUT</a>
-                    </li>
-                    <li class="nav-item headerNavItem">
-                        <a class="nav-link" href="#team">TEAM</a>
-                    </li>
-                    <li class="nav-item headerNavItem">
-                        <a class="nav-link" href="#contact">CONTACT</a>
-                    </li>
-                </ul>
+    <header id="header">
+    <div class="headerCoverContainer">
+        <img src="img/header-bg.jpg" alt="imagen de fondo header" class="headerCoverImg">
+    </div>
+        <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#header"><img src="img/navbar-logo.svg" alt="landing page logo" class="headerLogo"></a>
+                <button class="navbar-toggler collapsed navBtn" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    MENU <svg class="svg-inline--fa fa-bars fa-w-14 ml-1" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg>
+                    
+                </button>
+                <div class="collapse navbar-collapse row justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item headerNavItem">
+                            <a class="nav-link" href="#services">SERVICES</a>
+                        </li>
+                        <li class="nav-item headerNavItem">
+                            <a class="nav-link" href="#portfolio">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item headerNavItem">
+                            <a class="nav-link" href="#about">ABOUT</a>
+                        </li>
+                        <li class="nav-item headerNavItem">
+                            <a class="nav-link" href="#team">TEAM</a>
+                        </li>
+                        <li class="nav-item headerNavItem">
+                            <a class="nav-link" href="#contact">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-          </nav>
-        <div>
-            <img src="img/header-bg.jpg" alt="">
+        </nav>
+        <div class="headerWelcome">
             <h1>Welcome To Our Studio!</h1>
             <h2>IT'S NICE TO MEET YOU</h2>
-            <button>TELL ME MORE</button>
+            <button class="btn">TELL ME MORE</button>
         </div>
     </header>
     <div>
-        <div>
+        <div class="">
             <h3>SERVICES</h3>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <div>
