--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <title>Empresarial</title>
 </head>
 <body>
     <header id="header">
-    <div class="headerCoverContainer">
-        <img src="img/header-bg.jpg" alt="imagen de fondo header" class="headerCoverImg">
-    </div>
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg sticky-top">
             <div class="container">
                 <a class="navbar-brand" href="#header"><img src="img/navbar-logo.svg" alt="landing page logo" class="headerLogo"></a>
                 <button class="navbar-toggler collapsed navBtn" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,9 +41,9 @@
             </div>
         </nav>
         <div class="headerWelcome">
-            <h1>Welcome To Our Studio!</h1>
-            <h2>IT'S NICE TO MEET YOU</h2>
-            <button class="btn">TELL ME MORE</button>
+            <h1 class="headerWelcomeH1">Welcome To Our Studio!</h1>
+            <h2 class="headerWelcomeH2">IT'S NICE TO MEET YOU</h2>
+            <button class="btn headerWelcomeBtn">TELL ME MORE</button>
         </div>
     </header>
     <div>
