modals in portfolio section implemented

--- a/index.html
+++ b/index.html
@@ -121,43 +121,152 @@
             </div>
         </section>
         <section class="portfolioSection" id="portfolio">
+            <h2>PORTFOLIO</h2>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
             <div class="container sectionContainer">
-                <h2>PORTFOLIO</h2>
-                <p>Lorem ipsum dolor sit amet consectetur.</p>
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="img/portfolio/01-thumbnail.jpg" alt="">
-                        <h4>Threads</h4>
-                        <p>Illustration</p>
+                        <div class="card">
+                            <a href="" data-toggle="modal" data-target=".portfoliomodal1"><img src="img/portfolio/01-thumbnail.jpg" alt="" class="portfolioCardPic"></a>
+                            <div class="card-body">
+                                <h4 class="card-title">Threads</h4>
+                                <p class="card-text">Illustration</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal fade portfoliomodal1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <h2>PROJECT NAME</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                <img src="img/portfolio/01-full.jpg" alt="">
+                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <p>Date: January 2020</p>
+                                <p>Client: Threads</p>
+                                <p>Category: Illustration</p>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <img src="img/portfolio/02-thumbnail.jpg" alt="">
-                        <h4>Explore</h4>
-                        <p>Graphic Design</p>
+                        <div class="card">
+                            <a href="" data-toggle="modal" data-target=".portfoliomodal2"><img src="img/portfolio/02-thumbnail.jpg" alt="" class="portfolioCardPic"></a>
+                            <div class="card-body">
+                                <h4 class="card-title">Explore</h4>
+                            <p class="card-text">Graphic Design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal fade portfoliomodal2" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <h2>PROJECT NAME</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                <img src="img/portfolio/02-full.jpg" alt="">
+                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <p>Date: January 2020</p>
+                                <p>Client: Explore</p>
+                                <p>Category: Graphic Design</p>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <img src="img/portfolio/03-thumbnail.jpg" alt="">
-                        <h4>Finish</h4>
-                        <p>Identity</p>
+                        <div class="card">
+                            <a href="" data-toggle="modal" data-target=".portfoliomodal3"><img src="img/portfolio/03-thumbnail.jpg" alt="" class="portfolioCardPic"></a>
+                            <div class="card-body">
+                                <h4 class="card-title">Finish</h4>
+                            <p class="card-text">Identity</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal fade portfoliomodal3" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <h2>PROJECT NAME</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                <img src="img/portfolio/03-full.jpg" alt="">
+                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <p>Date: January 2020</p>
+                                <p>Client: Finish</p>
+                                <p>Category: Identity</p>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <img src="img/portfolio/04-thumbnail.jpg" alt="">
-                        <h4>Lines</h4>
-                        <p>Branding</p>
+                        <div class="card">
+                            <a href="" data-toggle="modal" data-target=".portfoliomodal4"><img src="img/portfolio/04-thumbnail.jpg" alt="" class="portfolioCardPic"></a>
+                            <div class="card-body">
+                                <h4 class="card-title">Lines</h4>
+                            <p class="card-text">Branding</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal fade portfoliomodal4" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <h2>PROJECT NAME</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                <img src="img/portfolio/04-full.jpg" alt="">
+                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <p>Date: January 2020</p>
+                                <p>Client: Lines</p>
+                                <p>Category: Branding</p>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <img src="img/portfolio/05-thumbnail.jpg" alt="">
-                        <h4>Southwest</h4>
-                        <p>Website Design</p>
+                        <div class="card">
+                            <a href="" data-toggle="modal" data-target=".portfoliomodal5"><img src="img/portfolio/05-thumbnail.jpg" alt="" class="portfolioCardPic"></a>
+                            <div class="card-body">
+                                <h4 class="card-title">Southwest</h4>
+                            <p class="card-text">Website Design</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal fade portfoliomodal5" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <h2>PROJECT NAME</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                <img src="img/portfolio/05-full.jpg" alt="">
+                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <p>Date: January 2020</p>
+                                <p>Client: Southwest</p>
+                                <p>Category: Website Design</p>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <img src="img/portfolio/06-thumbnail.jpg" alt="">
-                        <h4>Window</h4>
-                        <p>Photography</p>
+                        <div class="card">
+                            <a href="" data-toggle="modal" data-target=".portfoliomodal6"><img src="img/portfolio/06-thumbnail.jpg" alt="" class="portfolioCardPic"></a>
+                            <div class="card-body">
+                                <h4 class="card-title">Window</h4>
+                            <p class="card-text">Photography</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal fade portfoliomodal6" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                                <h2>PROJECT NAME</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                <img src="img/portfolio/06-full.jpg" alt="">
+                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <p>Date: January 2020</p>
+                                <p>Client: Window</p>
+                                <p>Category: Photography</p>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <section id="about">
             <div class="container sectionContainer">
                 <h2>ABOUT</h2>
