--- a/index.html
+++ b/index.html
@@ -137,14 +137,21 @@
                     <div class="modal fade portfoliomodal1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
-                                <h2>PROJECT NAME</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                                <img src="img/portfolio/01-full.jpg" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                <p>Date: January 2020</p>
-                                <p>Client: Threads</p>
-                                <p>Category: Illustration</p>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                                <div class="container">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">X</button>
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-8">
+                                            <h2>PROJECT NAME</h2>
+                                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                            <img src="img/portfolio/01-full.jpg" alt="" style="width: 100%;">
+                                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                            <p>Date: January 2020</p>
+                                            <p>Client: Threads</p>
+                                            <p>Category: Illustration</p>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">X Close Project</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -160,14 +167,21 @@
                     <div class="modal fade portfoliomodal2" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
-                                <h2>PROJECT NAME</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                                <img src="img/portfolio/02-full.jpg" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                <p>Date: January 2020</p>
-                                <p>Client: Explore</p>
-                                <p>Category: Graphic Design</p>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                                <div class="container">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">X</button>
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-8">
+                                            <h2>PROJECT NAME</h2>
+                                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                            <img src="img/portfolio/02-full.jpg" alt="" style="width: 100%;">
+                                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                            <p>Date: January 2020</p>
+                                            <p>Client: Explore</p>
+                                            <p>Category: Graphic Design</p>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">X Close Project</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -183,14 +197,21 @@
                     <div class="modal fade portfoliomodal3" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
-                                <h2>PROJECT NAME</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                                <img src="img/portfolio/03-full.jpg" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                <p>Date: January 2020</p>
-                                <p>Client: Finish</p>
-                                <p>Category: Identity</p>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                                <div class="container">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">X</button>
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-8">
+                                            <h2>PROJECT NAME</h2>
+                                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                            <img src="img/portfolio/03-full.jpg" alt="" style="width: 100%;">
+                                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                            <p>Date: January 2020</p>
+                                            <p>Client: Finish</p>
+                                            <p>Category: Identity</p>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">X Close Project</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -206,14 +227,21 @@
                     <div class="modal fade portfoliomodal4" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
-                                <h2>PROJECT NAME</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                                <img src="img/portfolio/04-full.jpg" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                <p>Date: January 2020</p>
-                                <p>Client: Lines</p>
-                                <p>Category: Branding</p>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                                <div class="container">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">X</button>
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-8">
+                                            <h2>PROJECT NAME</h2>
+                                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                            <img src="img/portfolio/04-full.jpg" alt="" style="width: 100%;">
+                                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                            <p>Date: January 2020</p>
+                                            <p>Client: Lines</p>
+                                            <p>Category: Branding</p>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">X Close Project</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -229,14 +257,21 @@
                     <div class="modal fade portfoliomodal5" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
-                                <h2>PROJECT NAME</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                                <img src="img/portfolio/05-full.jpg" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                <p>Date: January 2020</p>
-                                <p>Client: Southwest</p>
-                                <p>Category: Website Design</p>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                                <div class="container">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">X</button>
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-8">
+                                            <h2>PROJECT NAME</h2>
+                                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                            <img src="img/portfolio/05-full.jpg" alt="" style="width: 100%;">
+                                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                            <p>Date: January 2020</p>
+                                            <p>Client: Southwest</p>
+                                            <p>Category: Website Design</p>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">X Close Project</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -252,14 +287,21 @@
                     <div class="modal fade portfoliomodal6" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
-                                <h2>PROJECT NAME</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur.</p>
-                                <img src="img/portfolio/06-full.jpg" alt="">
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                <p>Date: January 2020</p>
-                                <p>Client: Window</p>
-                                <p>Category: Photography</p>
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close Project</button>
+                                <div class="container">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">X</button>
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-8">
+                                            <h2>PROJECT NAME</h2>
+                                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                                            <img src="img/portfolio/06-full.jpg" alt="" style="width: 100%;">
+                                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                            <p>Date: January 2020</p>
+                                            <p>Client: Window</p>
+                                            <p>Category: Photography</p>
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">X Close Project</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
