--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="headerWelcome">
             <h1 class="headerWelcomeH1">Welcome To Our Studio!</h1>
             <h2 class="headerWelcomeH2">IT'S NICE TO MEET YOU</h2>
-            <button class="btn headerWelcomeBtn">TELL ME MORE</button>
+            <a href="#services"><button class="btn headerWelcomeBtn">TELL ME MORE</button></a>
         </div>
     </header>
     <div>
@@ -127,7 +127,9 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card">
+                            <div class="portfolioCardPicHover"></div>
                             <a href="" data-toggle="modal" data-target=".portfoliomodal1"><img src="img/portfolio/01-thumbnail.jpg" alt="" class="portfolioCardPic"></a>
+                            
                             <div class="card-body">
                                 <h4 class="card-title">Threads</h4>
                                 <p class="card-text">Illustration</p>
@@ -371,8 +373,8 @@
                         <img src="img/team/1.jpg" alt="" class="teamProfilePic">
                         <h4>Kay Garland</h4>
                         <p>Lead Designer</p>
-                        <a href="!#">
-                            <svg class="teamTwitterLink" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" role="img" 
+                        <a href="!#" class="teamTwitterLink">
+                            <svg class="teamTwitterLogo" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" role="img" 
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
                                 <path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974
                                 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3
@@ -383,16 +385,16 @@
                                 </path>
                             </svg>
                         </a>
-                        <a href="!#">
-                            <svg class="teamFBLink" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook-f" role="img"
+                        <a href="!#" class="teamFBLink">
+                            <svg class="teamFBLogo" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook-f" role="img"
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg="">
                                 <path fill="currentColor" d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08
                                 124.72v70.62H22.89V288h81.39v224h100.17V288z">
                                 </path>
                             </svg>
                         </a>
-                        <a href="!#">
-                            <svg class="teamLinLink aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" role="img"
+                        <a href="!#" class="teamLinLink">
+                            <svg class="teamLinLogo" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" role="img"
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg="">
                                 <path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9
                                 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z">
@@ -404,8 +406,8 @@
                         <img src="img/team/2.jpg" alt="" class="teamProfilePic">
                         <h4>Larry Parker</h4>
                         <p>Lead Marketer</p>
-                        <a href="!#">
-                            <svg class="teamTwitterLink" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" role="img" 
+                        <a href="!#" class="teamTwitterLink">
+                            <svg class="teamTwitterLogo" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" role="img" 
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
                                 <path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974
                                 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3
@@ -416,16 +418,16 @@
                                 </path>
                             </svg>
                         </a>
-                        <a href="!#">
-                            <svg class="teamFBLink" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook-f" role="img"
+                        <a href="!#" class="teamFBLink">
+                            <svg class="teamFBLogo" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook-f" role="img"
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg="">
                                 <path fill="currentColor" d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08
                                 124.72v70.62H22.89V288h81.39v224h100.17V288z">
                                 </path>
                             </svg>
                         </a>
-                        <a href="!#">
-                            <svg class="teamLinLink" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" role="img"
+                        <a href="!#" class="teamLinLink">
+                            <svg class="teamLinLogo" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" role="img"
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg="">
                                 <path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9
                                 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z">
@@ -437,8 +439,8 @@
                         <img src="img/team/3.jpg" alt="" class="teamProfilePic">
                         <h4>Diana Petersen</h4>
                         <p>Lead Developer</p>
-                        <a href="!#">
-                            <svg class="teamTwitterLink" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" role="img" 
+                        <a href="!#" class="teamTwitterLink">
+                            <svg class="teamTwitterLogo" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" role="img" 
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
                                 <path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974
                                 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3
@@ -449,16 +451,16 @@
                                 </path>
                             </svg>
                         </a>
-                        <a href="!#">
-                            <svg class="teamFBLink" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook-f" role="img"
+                        <a href="!#" class="teamFBLink">
+                            <svg class="teamFBLogo" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook-f" role="img"
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" data-fa-i2svg="">
                                 <path fill="currentColor" d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08
                                 124.72v70.62H22.89V288h81.39v224h100.17V288z">
                                 </path>
                             </svg>
                         </a>
-                        <a href="!#">
-                            <svg class="teamLinLink" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" role="img"
+                        <a href="!#" class="teamLinLink">
+                            <svg class="teamLinLogo" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" role="img"
                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg="">
                                 <path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9
                                 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z">
